@@ -9,6 +9,8 @@ CHANGELOG
 * Rename stake to maintenance stake (fixes #834)
 * Add validity to path filter (fixes #836)
 * Do not redrape topology geometries, use path 3D geometry (fixes #832)
+* Fix document export of Trail objects (fixes #839)
+
 
 0.20.3 (2013-09-30)
 -------------------
